# kaspa-ng-v0

./: .gitignore  Cargo.toml  README.md  check
bip32/: Cargo.toml
bip32/src/: address_type.rs  lib.rs  private_key.rs  xpublic_key.rs
core/: Cargo.toml
core/src/: application.rs  controls.rs  error.rs  icon.rs  init.rs  lib.rs  menu.rs  prelude.rs  templates.rs  user.rs  workspace.rs
core/src/components/: app.js  config.js
core/src/console/: module.rs
core/src/home/: module.rs
core/src/network/: mod.rs  module.rs
core/src/network/view/: mod.rs  node.rs
core/src/resources/: module.rs
core/src/status/: module.rs
core/src/test/: module.rs
core/src/wallet/: import.rs  mod.rs  module.rs
protocol/: Cargo.toml
protocol/src/: application.rs  controls.rs  init.rs  lib.rs  menu.rs
root/: index.html
root/lib/: app.js
root/resources/: style.css
src/: main.rs
wallet/: Cargo.toml
wallet/src/: address_type.rs  error.rs  hd_wallet.rs  lib.rs  main.rs  manager.rs  private_key.rs  public_key.rs  storage.rs  tests.rs  types.rs  wrapper.rs  xkey.rs  xprivate_key.rs  xpub.rs  xpublic_key.rs
wallet/src/mnemonic/: language.rs  mod.rs  phrase.rs
wallet/src/tests/: mod.rs  native.rs  wasm.rs
wallet/src/wallets/: gen0.rs  gen1.rs  gen2.rs  mod.rs
wallet/src/wallets/gen0/: hd.rs  wallet.rs
wallet/src/wallets/gen1/: hd.rs  wallet.rs
wasm/: .gitignore  Cargo.toml  build-web  build-web-dev
wasm/src/: lib.rs
