[package]
name = "rusty-kaspa-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "wasm",
    "wallet"
]

[dependencies]
workflow-http.workspace = true
duct.workspace = true
async-std.workspace = true
rand.workspace = true
tide = "0.16.0"

[workspace.dependencies]
workflow-http = {path = "../workflow-http"}
workflow-ux   = {path = "../workflow-ux"}
workflow-log  = {path = "../workflow-rs/log"}
workflow-core = {path = "../workflow-rs/core"}
workflow-html = {path = "../workflow-rs/html"}
workflow-wasm = {path = "../workflow-rs/wasm"}
workflow-async-trait = {path = "../workflow-async-trait"}

async-std = { version = "1.8.0", features = ["attributes"] }
convert_case = "0.5.0"
rand = "0.7.3"
duct = "0.13.5"
thiserror = "1.0.32"
url = "2.3.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
js-sys="*"

[workspace.dependencies.web-sys]
version = "0.3.56"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlLinkElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlHrElement',
    'Node',
    'NodeList',
    'Window',
    'InputEvent',
    'MouseEvent',
    'ErrorEvent',
    'KeyEvent',
    'CustomEvent',
    'HtmlCollection',
    'DomTokenList',
    'SvgPathElement',
    'SvgPoint',
    'DomRect',
    'TransitionEvent',
    'MutationObserver',
    'MutationObserverInit',
    'MutationRecord',
    'Location',
]