# [package]
# name = "rusty-kaspa-server"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = [
    "core",
    "wasm",
    "wallet"
]

[workspace.package]
version = "0.1.0"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
# include = ["src/**/*.rs", "Cargo.toml"]
repository = "https://github.com/aspectron/kaspa-ng"

# [dependencies]
# workflow-http.workspace = true
# duct.workspace = true
# async-std.workspace = true
# rand.workspace = true
# tide = "0.16.0"

[workspace.dependencies]
workflow-http = {path = "../workflow-http"}
workflow-ux   = {path = "../workflow-ux"}
workflow-log  = {path = "../workflow-rs/log", features=[]}
workflow-core = {path = "../workflow-rs/core"}
workflow-html = {path = "../workflow-rs/html"}
workflow-wasm = {path = "../workflow-rs/wasm"}
workflow-terminal = {path = "../workflow-rs/terminal"}
workflow-async-trait = {path = "../workflow-async-trait"}

addresses = {path="../rusty-kaspa/crypto/addresses"}
consensus-core = {path="../rusty-kaspa/consensus/core"}
kaspa-rpc-core = {path="../rusty-kaspa/rpc/core", package="rpc-core"}
kaspa-wrpc-client = {path="../rusty-kaspa/rpc/wrpc/client"}
kaspa-bip32 = {path="../rusty-kaspa/wallet/bip32"}
kaspa-wallet-core = {path = "../rusty-kaspa/wallet/core"}
kaspa-wallet-cli = {path = "../rusty-kaspa/wallet/cli"}

async-std = { version = "1.12.0", features = ["attributes"] }
convert_case = "0.6.0"
duct = "0.13.6"
js-sys="0.3.61"
rand = "0.8.5"
thiserror = "1.0.38"
url = "2.3.1"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
tokio = "1.24.2"

[workspace.dependencies.web-sys]
version = "0.3.61"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlLinkElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlHrElement',
    'Node',
    'NodeList',
    'Window',
    'InputEvent',
    'MouseEvent',
    'ErrorEvent',
    'KeyEvent',
    'CustomEvent',
    'HtmlCollection',
    'DomTokenList',
    'SvgPathElement',
    'SvgPoint',
    'DomRect',
    'TransitionEvent',
    'MutationObserver',
    'MutationObserverInit',
    'MutationRecord',
    'Location',
]