[package]
name = "kaspa-bip32"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core= { version = "0.6", features = ["std"] }
workflow-log = {path="../../workflow-log", features=[]}
workflow-core = {path="../../workflow-core" }
hex = "*"

[dependencies.bs58]
version = "0.4"
features = ["check"]
default-features = false

[dependencies.hmac]
version = "0.12"
default-features = false

[dependencies.secp256k1-ffi]
version = "0.24"
package = "secp256k1"
features=["global-context", "rand-std"]

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.zeroize]
version = "1"
default-features = false
features=["alloc"]

[dependencies.ripemd]
version = "0.1"
default-features = false

[dependencies.subtle]
version = "2"
default-features = false

[dependencies.tokio]
version="*"

[dependencies.once_cell]
version = "1"

[dependencies.pbkdf2]
version = "0.11"
default-features = false
