[package]
name = "kaspa-apps-core"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-ux   = {path = "../../workflow-ux"}
workflow-log  = {path = "../../workflow-log"}
workflow-core = {path = "../../workflow-core"}
workflow-html = {path = "../../workflow-html"}
workflow-wasm = {path = "../../workflow-wasm"}

convert_case = "0.5.0"
thiserror = "1.0.32"
url = "2.3.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlLinkElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlHrElement',
    'Node',
    'NodeList',
    'Window',
    'InputEvent',
    'MouseEvent',
    'ErrorEvent',
    'KeyEvent',
    'CustomEvent',
    'HtmlCollection',
    'DomTokenList',
    'SvgPathElement',
    'SvgPoint',
    'DomRect',
    'TransitionEvent',
    'MutationObserver',
    'MutationObserverInit',
    'MutationRecord',
    'Location',
]
