[package]
name = "kaspa-ng-core"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-ux.workspace  = true
workflow-log.workspace  = true
workflow-core.workspace  = true
workflow-terminal.workspace  = true
workflow-html.workspace  = true
workflow-wasm.workspace  = true
workflow-async-trait.workspace  = true
kaspa-wallet-cli.workspace = true

convert_case.workspace  = true
thiserror.workspace  = true
url.workspace  = true
wasm-bindgen.workspace  = true
wasm-bindgen-futures.workspace  = true
js-sys.workspace  = true
web-sys.workspace  = true
rand.workspace = true
