[package]
name = "kaspa-ng-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
#rand_core= { version = "0.6", features = ["std"] }
workflow-log = {path="../../workflow-rs/log", features=[]}
workflow-core = {path="../../workflow-rs/core" }
workflow-async-trait = {path="../../workflow-async-trait"}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
hex = "*"
addresses = {path="../../rusty-kaspa/crypto/addresses"}
consensus-core = {path="../../rusty-kaspa/consensus/core"}
kaspa-rpc-core = {path="../../rusty-kaspa/rpc/core", package="rpc-core"}
kaspa-wrpc-client = {path="../../rusty-kaspa/rpc/wrpc/client"}
kaspa-bip32 = {path="../../rusty-kaspa/wallet/bip32"}
kaspa-wallet-core = {path="../../rusty-kaspa/wallet/core"}


[dependencies.tokio]
version="*"


[features]
test=[]