[package]
name = "kaspa-ng-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-log.workspace = true
workflow-core.workspace = true
workflow-async-trait.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
#hex = "*"
addresses.workspace = true
consensus-core.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-bip32.workspace = true
kaspa-wallet-core.workspace = true


tokio="*"


[features]
test=[]